objects/SVMXC__Service_Request__c.object
<CustomObject>
    <description>This object can be used to store service request data from 3rd party CRM systems</description>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Name</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Initial response date and time</description>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Appointment_Duration__c</fullName>
        <description>Appointment Duration</description>
        <label>Appointment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Closed by user</description>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Closed Date and Time</description>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ERP_External_ID__c</fullName>
        <description>External Id for Service Request in other system</description>
        <externalId>true</externalId>
        <label>ERP External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Start_Time__c</fullName>
        <description>Appointment requested start date and time</description>
        <label>Preferred Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Priority of service request</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Problem_Description__c</fullName>
        <description>Problem Description</description>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product serial name</description>
        <label>Serial Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Request_Source__c</fullName>
        <description>Origin of the Service Request</description>
        <label>Service Request Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Status of the service request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Subject__c</fullName>
        <description>Subject of the service request</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <description>Type of service request</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>